# addverb_cobot_dev_container

./: Dockerfile  README.md  docker-compose.yml  run.sh
.devcontainer/: devcontainer.json
cobot_ros2/: README_.md  Setup.md
cobot_ros2/addverb_cobot_control/: CMakeLists.txt  package.xml
cobot_ros2/addverb_cobot_control/config/: payload_config.yaml  ros2_controllers.yaml
cobot_ros2/addverb_cobot_control/launch/: cobot_control.launch.py
cobot_ros2/addverb_cobot_controllers/: CMakeLists.txt  addverb_cobot_controllers_plugin.xml  package.xml
cobot_ros2/addverb_cobot_controllers/include/addverb_cobot_controllers/: cartesian_impedance_controller.h  cartesian_jogging_controller.h  control_default_params.h  controller_utils.h  effort_controller.h  free_drive_controller.h  gravity_comp_effort_controller.h  gripper_controller.h  joint_impedance_controller.h  joint_jogging_controller.h  ptp_joint_controller.h  ptp_tcp_controller.h  recorder_controller.h  velocity_controller.h
cobot_ros2/addverb_cobot_controllers/src/: cartesian_impedance_controller.cpp  cartesian_jogging_controller.cpp  controller_utils.cpp  effort_controller.cpp  free_drive_controller.cpp  gravity_comp_effort_controller.cpp  gripper_controller.cpp  joint_impedance_controller.cpp  joint_jogging_controller.cpp  ptp_joint_controller.cpp  ptp_tcp_controller.cpp  recorder_controller.cpp  velocity_controller.cpp
cobot_ros2/addverb_cobot_description/: CMakeLists.txt  package.xml
cobot_ros2/addverb_cobot_description/launch/: display.launch.py
cobot_ros2/addverb_cobot_description/meshes/: base_link.STL  end_effector.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL
cobot_ros2/addverb_cobot_description/ros2_control/: heal.config.xacro  heal.ros2_control.xacro  syncro.ros2_control.xacro
cobot_ros2/addverb_cobot_description/rviz/: default.rviz
cobot_ros2/addverb_cobot_description/urdf/: heal.urdf  heal.urdf.xacro  heal_ros2_control.urdf.xacro  syncro_ros2_control.urdf.xacro
cobot_ros2/addverb_cobot_hardware/: CMakeLists.txt  cobot_hw_interface.xml  package.xml
cobot_ros2/addverb_cobot_hardware/include/addverb_cobot_hardware/: cobot_auxiliary.h  cobot_executor.h  cobot_hw_interface.h  cobot_services.h
cobot_ros2/addverb_cobot_hardware/src/: cobot_auxiliary.cpp  cobot_executor.cpp  cobot_hw_interface.cpp  cobot_services.cpp
cobot_ros2/addverb_cobot_msgs/: CMakeLists.txt  package.xml
cobot_ros2/addverb_cobot_msgs/action/: FollowCartesianTrajectory.action  Replay.action
cobot_ros2/addverb_cobot_msgs/msg/: CartesianJoggingVelocity.msg  CartesianTrajectory.msg  CartesianTrajectoryPoint.msg  JointJoggingVelocity.msg
cobot_ros2/addverb_cobot_msgs/srv/: FlexFactor.srv  Gripper.srv  Record.srv
cobot_ros2/addverb_moveit_configs/syncro_5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
cobot_ros2/addverb_moveit_configs/syncro_5_moveit_config/config/: initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  robot.ros2_control.xacro  robot.srdf  robot.urdf.xacro  ros2_controllers.yaml
cobot_ros2/addverb_moveit_configs/syncro_5_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
cobot_ros2/examples/: CMakeLists.txt  package.xml
cobot_ros2/examples/src/: demo_cartesian_impedance.cpp  demo_cartesian_jogging.cpp  demo_effort.cpp  demo_gravity_comp_effort.cpp  demo_gripper.cpp  demo_joint_impedance.cpp  demo_joint_jogging.cpp  demo_ptp_joint.cpp  demo_ptp_tcp.cpp  demo_recorder.cpp  demo_velocity.cpp
cobot_ros2/moveit_pytest/: README.md  package.xml  setup.cfg  setup.py
cobot_ros2/moveit_pytest/moveit_pytest/: moveit_test.py  plan_and_execute.py
cobot_ros2/teleoperation/include/: teleoperation_datatypes.h  teleoperation_interface.h
cobot_ros2/utility/: CMakeLists.txt  package.xml
cobot_ros2/utility/include/utility/: cobot_comm_wrapper.h  controller_defs.h  data_communicator.h  data_converter.h  data_processor.h  data_processor_defs.h  data_validator.h  hardware_interface_defs.h  robot_config_info.h  ros_wrapper_error_codes.h
cobot_ros2/utility/src/: cobot_comm_wrapper.cpp  data_communicator.cpp  data_converter.cpp  data_processor.cpp  data_validator.cpp  hardware_interface_defs.cpp
robot_network_config/: ip.csv
scripts/: build_workspace.sh  launch_isaac_sim.sh
