cmake_minimum_required(VERSION 3.8)
project(addverb_cobot_hardware)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_ros REQUIRED)
find_package(hardware_interface REQUIRED)
find_package(pluginlib REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclcpp_lifecycle REQUIRED)
find_package(rclpy REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(utility REQUIRED)
find_package(kdl_parser REQUIRED)
find_package(addverb_cobot_controllers REQUIRED)
find_package(addverb_cobot_msgs REQUIRED)
find_package(std_srvs REQUIRED)


set(THIS_PACKAGE_INCLUDE_DEPENDS
  hardware_interface
  pluginlib
  rclcpp
  rclcpp_lifecycle
  geometry_msgs
  kdl_parser 
  addverb_cobot_controllers
  addverb_cobot_msgs
  rclcpp_action
  std_srvs
)

set(COBOT_UI_BACKEND_DIR /opt/addverb/cobot_backend)



# Function to glob files based on a pattern
# TODO: Move these functions to a common cmake
function(glob_files GLOB_PATTERN OUTPUT_VAR)
    # Get the list of files with full paths based on the provided pattern
    if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.11.0")
      file(GLOB_RECURSE FILE_LIST CONFIGURE_DEPENDS ${GLOB_PATTERN})
    else()
      # For backwards compatibility
      file(GLOB FILE_LIST ${GLOB_PATTERN})
    endif()

    # Set the output variable to the list of files
    set(${OUTPUT_VAR} ${FILE_LIST} PARENT_SCOPE)
endfunction()

# Define a function to collect unique directory paths from a glob pattern
function(get_unique_dirs_from_glob GLOB_PATTERN OUTPUT_VAR)
    # Call the glob_files function to get the list of files
    glob_files(${GLOB_PATTERN} FILE_LIST)

    # Initialize a list to store unique directory paths
    set(UNIQUE_DIRS)

    # Loop over each file path and extract its directory path
    foreach(FILE_PATH ${FILE_LIST})
        get_filename_component(DIR_PATH ${FILE_PATH} DIRECTORY)
        list(APPEND UNIQUE_DIRS ${DIR_PATH})
    endforeach()

    # Remove duplicate directory paths
    list(REMOVE_DUPLICATES UNIQUE_DIRS)

    # Set the output variable to the list of unique directory paths
    set(${OUTPUT_VAR} ${UNIQUE_DIRS} PARENT_SCOPE)
endfunction()



# Look for header files and get their locations
get_unique_dirs_from_glob("${COBOT_UI_BACKEND_DIR}/**.h" COBOT_UI_BACKEND_INCLUDE_DIRS)

# Get all shared objects
glob_files("${COBOT_UI_BACKEND_DIR}/**.so" COBOT_UI_BACKEND_LIBRARIES)


#/////////////////// NEW
add_library(cobot_hw_interface src/cobot_hw_interface.cpp src/cobot_services.cpp src/cobot_executor.cpp src/cobot_auxiliary.cpp)
target_link_libraries(cobot_hw_interface ${COBOT_UI_BACKEND_LIBRARIES} addverb_cobot_controllers::controller_utils)

target_compile_features(cobot_hw_interface PUBLIC c_std_99 cxx_std_11)  # Require C99 and C++17
target_include_directories(cobot_hw_interface 
  PUBLIC
  $<BUILD_INTERFACE:include/
  ${COBOT_UI_BACKEND_INCLUDE_DIRS}>
  $<INSTALL_INTERFACE:include/${PROJECT_NAME}>)

ament_target_dependencies(
  cobot_hw_interface
  utility
  addverb_cobot_controllers
  ${THIS_PACKAGE_INCLUDE_DEPENDS}
)

pluginlib_export_plugin_description_file(hardware_interface cobot_hw_interface.xml)

#////////////////////// 

install(
  DIRECTORY include/
  DESTINATION include
)
install(
  # TARGETS addverb_cobot_hardware
  TARGETS cobot_hw_interface
  EXPORT export_${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
  )
  install(
    FILES  ${COBOT_UI_BACKEND_LIBRARIES}
  DESTINATION lib
)


if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_export_include_directories(
  include
)
ament_export_libraries(
  addverb_cobot_hardware
)
ament_export_targets(
  export_${PROJECT_NAME} HAS_LIBRARY_TARGET
)

ament_package()
